--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta name="monetag" content="850728c38ea4ef0025679dd6f317ff21">
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="165749" async data-cfasync="false"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> مجموعة الألعاب المميزة</title>
